<resources>
    <string name="app_name">Coordinator</string>
    <string name="test_sentence_20">注意这是一个有二十个中文字用于测试的句子</string>
    <string name="test_sentence_100">注意这是一个有二十个中文字用于测试的句子注意这是一个有二十个中文字用于测试的句子注意这是一个有二十个中文字用于测试的句子注意这是一个有二十个中文字用于测试的句子注意这是一个有二十个中文字用于测试的句子</string>
    <string name="test_type">it\'s a type tip</string>
    <string name="test">测试</string>

    <string name="text_phone">手机号码</string>
    <string name="text_workphone">工作电话</string>
    <string name="text_password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="text_myproject">我的项目</string>
    <string name="text_message">消息</string>
    <string name="text_importantmsg">重要消息</string>
    <string name="text_baseinfo">基本信息</string>
    <string name="text_mytask">我的任务</string>
    <string name="text_feedback_tips">你可以写下建议或意见，并留下联系方式，我们会做出及时的回复。</string>
    <string name="text_copyright">Copyright&#169; 2015 SCUT-GOF\n本应用由独立小组开发未经允许不能用于商业用途</string>
    <string name="text_ensure">确定</string>
    <string name="text_cancel">取消</string>
    <string name="text_proname">项目名</string>
    <string name="text_start_end_time">起始时间</string>
    <string name="text_latest_starttime">最晚开始时间</string>
    <string name="text_endtime">截止时间</string>
    <string name="text_name">名字</string>
    <string name="text_email">邮箱</string>
    <string name="text_locale">地区</string>
    <string name="text_birthday">生日</string>
    <string name="text_gender">性别</string>
    <string name="text_signature">个性签名</string>
    <string name="text_prodesc">项目描述</string>
    <string name="text_propricipal">项目负责人</string>
    <string name="text_protype">项目类型</string>
    <string name="text_proaffiliation">项目归属</string>
    <string name="text_presenttime"> 0年 0月 0日</string>
    <string name="text_protype_personal">个人项目</string>
    <string name="text_taskname">任务名</string>
    <string name="text_taskcategory">任务分类</string>
    <string name="text_taskcontent">任务详细</string>
    <string name="text_tagtip">写一个优雅的标签</string>
    <string name="text_taskdesc">任务备注</string>
    <string name="text_taskpriority">任务优先级</string>
    <string name="text_taskdeafultcategory">默认</string>
    <string name="text_tip_hasnoproject">你没有加入任何项目</string>
    <string name="text_tip_hasnomessage">你没有重要消息</string>
    <string name="text_creator">创建者</string>
    <string name="text_taskstatus">进展阶段</string>
    <string name="text_numofpeople">人数</string>
    <string name="text_childtask">子任务</string>
    <string name="text_tag">标签</string>
    <string name="text_post_defaultname">工作心记</string>
    <string name="hint_leaveusinfo">留下任何的联系方式</string>
    <string name="hint_non_compulsion">可不填</string>
    <string name="action_setting">设置</string>
    <string name="action_feedback">帮助&#38;反馈</string>
    <string name="action_personaldata">个人数据</string>
    <string name="action_parters">同事</string>
    <string name="action_workpost">工作圈</string>
    <string name="action_schedule">我的日程</string>
    <string name="action_home">首页</string>
    <string name="action_task">任务</string>
    <string name="action_submit">提交</string>
    <string name="action_newpro">新建项目</string>
    <string name="action_joinpro">加入项目</string>
    <string name="action_cancel">取消</string>
    <string name="action_nextstep">下一步</string>
    <string name="action_laststep">上一步</string>
    <string name="action_commit">完成</string>
    <string name="action_moreconfig">高级设置</string>
    <string name="action_filtercondition">筛选条件</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">编辑</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_newtask">新建任务</string>
    <string name="action_proinfo">项目信息</string>
    <string name="action_exitapp">注销当前账号</string>
    <string name="action_accepttask">参与任务</string>
    <string name="action_quittask">退出任务</string>
    <string name="action_delete">删除</string>
    <string name="action_add">添加</string>
    <string name="action_autosync">联网同步日程等数据</string>
    <string name="warn_tokeninvalid">你的账号在别处登录，需重新登录</string>
    <string name="warn_inputproname">你要输入项目名称</string>
    <string name="warn_chooseprotime">你要选择项目起始时间</string>
    //third library
    <string name="folder_all">All Images</string>
    <string name="preview">Preview</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="msg_amount_limit">Select images amount is limit</string>

</resources>
