<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group >
    <item
        android:id="@+id/btn_home"
        android:icon="@drawable/home"
        android:title="@string/action_home"/>
    <item
        android:id="@+id/btn_userdata"
        android:icon="@drawable/account"
        android:title="@string/action_personaldata"/>
    <item
        android:id="@+id/btn_partners"
        android:icon="@drawable/group_black"
        android:title="@string/action_parters" />
    <item
        android:id="@+id/btn_workpost"
        android:icon="@drawable/toy"
        android:title="@string/action_workpost" />
    <item android:id="@+id/btn_setting"
        android:icon="@drawable/setting"
        android:title="@string/action_setting"/>
    <item android:id="@+id/btn_feedback"
        android:icon="@drawable/feedback"
        android:title="@string/action_feedback"/>
    <item android:id="@+id/btn_test"
        android:icon="@drawable/home"
        android:title="@string/test"
        />
</group>
</menu>