<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/radius_normal"
    app:cardElevation="@dimen/evelation_l1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/text_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/test_sentence_20" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_tip"
            android:layout_margin="@dimen/margin_medium"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_ensure"
            style="@style/text_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_flat_btn_height"
            android:layout_alignRight="@+id/textinput"
            android:layout_below="@+id/textinput"
            android:layout_marginBottom="@dimen/margin_normal"
            android:layout_marginLeft="@dimen/margin_normal"
            android:background="@drawable/bg_flat_btn"
            android:text="@string/text_ensure"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/text_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_flat_btn_height"
            android:layout_below="@+id/textinput"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_toLeftOf="@+id/btn_ensure"
            android:background="@drawable/bg_flat_btn"
            android:text="@string/text_cancel" />

    </RelativeLayout>
</android.support.v7.widget.CardView>